--- a/03-Data-Analysis-with-Pandas.ipynb
+++ b/03-Data-Analysis-with-Pandas.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "These notebooks are designed for my June 14-18 course \"Data Analysis with Pandas,\" part of the [2021 Text Analysis Pedagogy Institute](https://nkelber.github.io/tapi2021/book/intro.html). These notebooks are still in active development!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dataset"
    ]
   },
