add matplotlib as requirement

--- a/01-Data-Analysis-With-Pandas.ipynb
+++ b/01-Data-Analysis-With-Pandas.ipynb
@@ -1062,6 +1062,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Boolean vector\n",
+    "book_filter = seattle_df['MaterialType'] == 'BOOK'\n",
+    "\n",
     "book_df = seattle_df[book_filter].copy()"
    ]
   },
