add Day 2 notebook and workbook/solutions

--- a/01-Data-Analysis-With-Pandas.ipynb
+++ b/01-Data-Analysis-With-Pandas.ipynb
@@ -289,8 +289,8 @@
     "\n",
     "| **Pandas Data Type** |  **Explanation**         | **Example** |\n",
     "|:-------------:|:---------------------------------------------------------------------------------------------------:|---|\n",
-    "| `object`         | strings, `NaN`   |   \"Exhalation / Ted Chiang.\"; `NaN`; \"2020\"                                                                         |\n",
-    "| `float64`         | floats       |  20.2 |                                      |\n",
+    "| `object`         | strings, mixture of strings and numeric values   |   \"Exhalation / Ted Chiang.\"                                                                        |\n",
+    "| `float64`         | floats, `NaN`       |  20.2, `NaN` |                                      |\n",
     "| `int64`       | integers |       20 |                                                |\n",
     "| `datetime64`       |  datetimes |   `2021-02-01`       "
    ]
@@ -459,9 +459,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Elena Ferrante'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Python dictionary\n",
     "book_dict = {'title': 'My Brilliant Friend',\n",
@@ -470,6 +481,31 @@
     "\n",
     "# Get value for the key author\n",
     "book_dict['author']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tressie McMillan'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Python dictionary\n",
+    "title_author_dict = {'My Brilliant Friend': 'Elena Ferrante',\n",
+    "                     'Thick': 'Tressie McMillan'}\n",
+    "\n",
+    "# Get value for the key Thick\n",
+    "title_author_dict['Thick']"
    ]
   },
   {
@@ -626,8 +662,13 @@
     "<div class=\"admonition pythonreview\" name=\"html-admonition\" style=\"background: lightgreen; padding: 10px\">\n",
     "<p class=\"title\"><b/>Python Review 🐍 </b></p>\n",
     "\n",
-    "Python `lists` consist of items separated by commas in square brackets.  \n",
-    "To slice a Python list and extract the first 2 values, we can use `[:2]`.\n",
+    "Python `lists` consist of items separated by commas in square brackets.    \n",
+    "\n",
+    "`books = ['My Brilliant Friend', 'Goosebumps', 'Man in the High Castle', 'Thick']`  \n",
+    "\n",
+    "To slice a Python list and extract the first 2 values, we can use `[:2]`.e.g. `books[:2]`.  \n",
+    "\n",
+    "`['My Brilliant Friend', 'Goosebumps']`\n",
     "</div>"
    ]
   },
@@ -641,6 +682,18 @@
     "books = ['My Brilliant Friend', 'Goosebumps', 'Man in the High Castle', 'Thick']\n",
     "# Slice the list\n",
     "books[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Python list\n",
+    "books = ['My Brilliant Friend', 'Goosebumps', 'Man in the High Castle', 'Thick']\n",
+    "# Index the list\n",
+    "books[2]"
    ]
   },
   {
