--- a/Complete-Notebooks/01-Data-Analysis-with-Pandas-Complete.ipynb
+++ b/Complete-Notebooks/01-Data-Analysis-with-Pandas-Complete.ipynb
@@ -3811,6 +3811,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seattle_df[seattle_df['MaterialType'] == 'BOOK']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [
