add Day 3 notebook and workbook/solutions

--- a/01-Data-Analysis-With-Pandas.ipynb
+++ b/01-Data-Analysis-With-Pandas.ipynb
@@ -942,15 +942,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Assign a variable the value 'Book'\n",
     "some_variable = 'Book'\n",
     "\n",
     "# Evaluate whether the variable equals 'Book'\n",
-    "some_variable == 'Book'"
+    "some_variable == 'E-Book'"
    ]
   },
   {
