--- a/Complete-Notebooks/02-Data-Analysis-With-Pandas-Complete.ipynb
+++ b/Complete-Notebooks/02-Data-Analysis-With-Pandas-Complete.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,16 +109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8a9c5698d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fbe5497c790>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3489,7 +3489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3522,7 @@
        "Name: Checkouts, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3540,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3573,7 @@
        "Name: Checkouts, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3593,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3626,7 @@
        "Name: Checkouts, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3659,7 +3659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3758,7 +3758,7 @@
        "[31864 rows x 1 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4388,7 +4388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4420,33 +4420,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>FlexTech--Laptops.</td>\n",
-       "      <td>No Creator</td>\n",
-       "      <td>25464</td>\n",
+       "      <td>Becoming (Unabridged)</td>\n",
+       "      <td>Michelle Obama</td>\n",
+       "      <td>16029</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>SPL HotSpot : connecting Seattle / [distributed by Verizon Wireless].</td>\n",
-       "      <td>No Creator</td>\n",
-       "      <td>19952</td>\n",
+       "      <td>Educated: A Memoir</td>\n",
+       "      <td>Tara Westover</td>\n",
+       "      <td>15013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>The New Yorker</td>\n",
-       "      <td>No Creator</td>\n",
-       "      <td>18554</td>\n",
+       "      <td>So You Want to Talk about Race (Unabridged)</td>\n",
+       "      <td>Ijeoma Oluo</td>\n",
+       "      <td>14932</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>The Economist</td>\n",
-       "      <td>No Creator</td>\n",
-       "      <td>17663</td>\n",
+       "      <td>The Goldfinch: A Novel (Pulitzer Prize for Fiction)</td>\n",
+       "      <td>Donna Tartt</td>\n",
+       "      <td>13051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>SPL HotSpot : connecting Seattle / [distributed by T-Mobile].</td>\n",
-       "      <td>No Creator</td>\n",
-       "      <td>17458</td>\n",
+       "      <td>Where the Crawdads Sing</td>\n",
+       "      <td>Delia Owens</td>\n",
+       "      <td>12996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4455,71 +4455,71 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32175</th>\n",
-       "      <td>Full Moon And Empty Arms</td>\n",
-       "      <td>Bob Dylan</td>\n",
+       "      <th>22548</th>\n",
+       "      <td>Money</td>\n",
+       "      <td>Pink Floyd</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32176</th>\n",
-       "      <td>The animators : a novel / Kayla Rae Whitaker.</td>\n",
-       "      <td>Whitaker, Kayla Rae,</td>\n",
+       "      <th>22549</th>\n",
+       "      <td>Mona Lisa Overdrive: Sprawl Trilogy, Book 3</td>\n",
+       "      <td>William Gibson</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32177</th>\n",
-       "      <td>FukuFuku : kitten tales. 1 / Konami Kanata ; translation, Marlaina McElheny, Ed Chavez.</td>\n",
-       "      <td>Konami, Kanata, 1958-</td>\n",
+       "      <th>22550</th>\n",
+       "      <td>Moby Dick (unabridged)</td>\n",
+       "      <td>Herman Melville</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32178</th>\n",
-       "      <td>Beowulf</td>\n",
-       "      <td>No Creator</td>\n",
+       "      <th>22551</th>\n",
+       "      <td>Mistakes Were Made</td>\n",
+       "      <td>Stephan Pastis</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32179</th>\n",
-       "      <td>The Cold Cold Ground</td>\n",
-       "      <td>Adrian McKinty</td>\n",
+       "      <th>22552</th>\n",
+       "      <td>Old In Art School: A Memoir of Starting Over</td>\n",
+       "      <td>Nell Irvin Painter</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32180 rows × 3 columns</p>\n",
+       "<p>22553 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                                         Title  \\\n",
-       "0                                                                           FlexTech--Laptops.   \n",
-       "1                        SPL HotSpot : connecting Seattle / [distributed by Verizon Wireless].   \n",
-       "2                                                                               The New Yorker   \n",
-       "3                                                                                The Economist   \n",
-       "4                                SPL HotSpot : connecting Seattle / [distributed by T-Mobile].   \n",
-       "...                                                                                        ...   \n",
-       "32175                                                                 Full Moon And Empty Arms   \n",
-       "32176                                            The animators : a novel / Kayla Rae Whitaker.   \n",
-       "32177  FukuFuku : kitten tales. 1 / Konami Kanata ; translation, Marlaina McElheny, Ed Chavez.   \n",
-       "32178                                                                                  Beowulf   \n",
-       "32179                                                                     The Cold Cold Ground   \n",
+       "                                                     Title  \\\n",
+       "0                                    Becoming (Unabridged)   \n",
+       "1                                       Educated: A Memoir   \n",
+       "2              So You Want to Talk about Race (Unabridged)   \n",
+       "3      The Goldfinch: A Novel (Pulitzer Prize for Fiction)   \n",
+       "4                                  Where the Crawdads Sing   \n",
+       "...                                                    ...   \n",
+       "22548                                                Money   \n",
+       "22549          Mona Lisa Overdrive: Sprawl Trilogy, Book 3   \n",
+       "22550                               Moby Dick (unabridged)   \n",
+       "22551                                   Mistakes Were Made   \n",
+       "22552         Old In Art School: A Memoir of Starting Over   \n",
        "\n",
-       "                     Creator  Checkouts  \n",
-       "0                 No Creator      25464  \n",
-       "1                 No Creator      19952  \n",
-       "2                 No Creator      18554  \n",
-       "3                 No Creator      17663  \n",
-       "4                 No Creator      17458  \n",
-       "...                      ...        ...  \n",
-       "32175              Bob Dylan         20  \n",
-       "32176   Whitaker, Kayla Rae,         20  \n",
-       "32177  Konami, Kanata, 1958-         20  \n",
-       "32178             No Creator         20  \n",
-       "32179         Adrian McKinty         20  \n",
+       "                  Creator  Checkouts  \n",
+       "0          Michelle Obama      16029  \n",
+       "1           Tara Westover      15013  \n",
+       "2             Ijeoma Oluo      14932  \n",
+       "3             Donna Tartt      13051  \n",
+       "4             Delia Owens      12996  \n",
+       "...                   ...        ...  \n",
+       "22548          Pink Floyd         20  \n",
+       "22549      William Gibson         20  \n",
+       "22550     Herman Melville         20  \n",
+       "22551      Stephan Pastis         20  \n",
+       "22552  Nell Irvin Painter         20  \n",
        "\n",
-       "[32180 rows x 3 columns]"
+       "[22553 rows x 3 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4532,7 +4532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4542,7 +4542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
