--- a/03-Data-Analysis-With-Pandas.ipynb
+++ b/03-Data-Analysis-With-Pandas.ipynb
@@ -1686,7 +1686,8 @@
    "source": [
     "plt.figure(figsize=(15,7))\n",
     "\n",
-    "creator_filter = checkouts_byyear['Creator'].str.contains('Creator of Your Choice')\n",
+    "creator_filter = checkouts_byyear['Creator'].str.contains('Creator of Your Choice',\n",
+    "                                                          na=False, case=False)\n",
     "\n",
     "# Use Seaborn to make a line plot\n",
     "sns.lineplot(data= checkouts_byyear[creator_filter],\n",
