--- a/Workbook-Solutions/03-Data-Analysis-with-Pandas-Workbook-Solutions.ipynb
+++ b/Workbook-Solutions/03-Data-Analysis-with-Pandas-Workbook-Solutions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Analysis with Pandas — Day 3 Workbook"
+    "# Data Analysis with Pandas — Day 3 Workbook Solutions"
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the Day 3 practice workbook for the June 2021 course \"Data Analysis with Pandas,\" part of the [Text Analysis Pedagogy Institute](https://nkelber.github.io/tapi2021/book/intro.html)."
+    "This is the Day 3 practice workbook solutions for the June 2021 course \"Data Analysis with Pandas,\" part of the [Text Analysis Pedagogy Institute](https://nkelber.github.io/tapi2021/book/intro.html)."
    ]
   },
   {
